force-app/main/default/objects/tc9_util__Approver_Portal__c/tc9_util__Approver_Portal__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>2c9 - Approver Portal</label>
</CustomObject>