force-app/main/default/objects/tc9_util__Approver_Portal__c/fields/tc9_util__Approved_Leave_Column_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Approved_Leave_Column_Fieldset__c</fullName>
    <label>Approved Leave Column Fieldset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>