force-app/main/default/objects/tc9_util__Approver_Portal__c/fields/tc9_util__Approver_Action_Error_Text__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Approver_Action_Error_Text__c</fullName>
    <label>Approver Action Error Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>