force-app/main/default/objects/tc9_util__Approver_Portal__c/fields/tc9_util__Consolidated_Approve_Timesheet_Path__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Consolidated_Approve_Timesheet_Path__c</fullName>
    <label>Consolidated Approve Timesheet Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>