force-app/main/default/objects/tc9_util__Approver_Portal__c/fields/tc9_util__Consolidated_Timesheet_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Consolidated_Timesheet_Email_Body__c</fullName>
    <inlineHelpText>Enter a custom label name to be used in Consolidate Timesheet Email Approval</inlineHelpText>
    <label>Consolidated Timesheet Email Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>