force-app/main/default/objects/tc9_util__Approver_Portal__c/fields/tc9_util__Consolidated_Timesheet_Email_Header__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Consolidated_Timesheet_Email_Header__c</fullName>
    <label>Consolidated Timesheet Email Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>