force-app/main/default/objects/tc9_util__Approver_Portal__c/fields/tc9_util__Display_Selected_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Display_Selected_Pay_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Selected Pay Rate</label>
    <type>Checkbox</type>
</CustomField>