force-app/main/default/objects/tc9_util__Approver_Portal__c/fields/tc9_util__Email_Approval_Field__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Email_Approval_Field__c</fullName>
    <inlineHelpText>API field is used to send an email for timesheet approval</inlineHelpText>
    <label>Email Approval Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>