force-app/main/default/objects/tc9_util__Approver_Portal__c/fields/tc9_util__Is_Multilingual__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Is_Multilingual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Multilingual</label>
    <type>Checkbox</type>
</CustomField>