force-app/main/default/objects/tc9_util__Approver_Portal__c/fields/tc9_util__Number_of_Delete_Approver_action_Days__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Number_of_Delete_Approver_action_Days__c</fullName>
    <description>This field is referenced by the Apex Scheduled Job: SkieGuestApproverActionDeleteSchedule to delete Approval Actions records. If the field (n) is &quot;blank&quot; the Approval Action records will be deleted after 30days; Otherwise the age of records to be deleted is based on TODAY - (n).</description>
    <inlineHelpText>Defines the age (number of days) of Approver Actions records for scheduled deletion; Where &quot;blank&quot;, the default is 30 days old.</inlineHelpText>
    <label>Number of Delete Approver action (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>