force-app/main/default/objects/tc9_util__Approver_Portal__c/fields/tc9_util__Org_Wide_Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Org_Wide_Sender_Name__c</fullName>
    <label>Org-Wide Sender Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>