force-app/main/default/objects/tc9_util__Approver_Portal__c/fields/tc9_util__Rejected_Expense_Column_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Rejected_Expense_Column_Fieldset__c</fullName>
    <label>Rejected Expense Column Fieldset</label>
    <length>80</length>
    <type>Text</type>
</CustomField>